--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
     </header>
     <main>
         <div class="container">
-        <h1> ElegÍ tu próximo destino </h1>
+        <h1 class="estilo"> ElegÍ tu próximo destino </h1>
 
        
           
@@ -56,7 +56,7 @@
 
             
   
-         <!-- MAPA -->
+         <!--MAPA-->
     <section class="mapa" > 
         <script type="text/javascript" src="/jQuery-3.6.0.js"></script>
         <script type="text/javascript" src="/public/map/jquery.vmap.js"></script>
@@ -75,7 +75,7 @@
         });
         </script>
     </section>
-    <h2> MAPA --></h2>
+    <h2> MAPA PARA HACER CLICK EN LA CIUDAD</h2>
          <!-- MAPA -->
 
     <div class ="map"> 
