--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,9 +1,14 @@
     <footer class="colorfondo">
-
-      <div></div>
-
       <div class="contendor">
+     
+
+         <hr>
+         <div class ="img-foot">
+         <img src="/images/gif.gif" alt="logo" style="width: 10%;">
+       </div>
+
         <ul class="footer" >
+         
           <li>
             <a href="#0">
               Quienes Somos
@@ -28,14 +33,31 @@
           </li>
           <li>
             <a href="#0">
-              Metodos de pago
+              Legales
               <span class="border border-top"></span>
               <span class="border border-bottom"></span>
             </a>
           </li>
         </ul>
-          <a>Copyright © 1999-2021 TURISTEANDO S.A. </a>
+          
+            <hr>
+            <div >  
+              <ul class="footer">
+              <li>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="/contacto"><i class="fas fa-envelope"></i></a>  
+              </li>
+              <li>
+                <a>© Copyright - 2021 www.turisteando.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.turisteando.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual. Turistando S.A. con domicilio en Calle Falsa 123 - Mendoza – Argentina. </a>
+              </li>
+            </ul> 
+            </div>
+
         </div>
+        
+        
       </div>
+
         
         </footer>
