--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,33 +1,32 @@
 <header>
-    <div class="container">
+    <div class="container header-container">
+
       <div class="header-left">
-     
+        <div class="header header-center">
+          <img src="/images/gif.gif" alt="logo" style="width: 50%;">
+        </div>
       </div>
-      <div class="buscador">
-      <div class="header header-center">
-        <img src="/images/gif.gif" alt="logo" style="width: 50%;">
-      </div>
+      <div class="top">
+
       <div class="header header-right">
           <nav>
-            <a href="/">Mapa</a>
+            <a href="/">Inicio</a>
             <span class="separador">|
             <a href="/login">Ingresá</a>
             <span class="separador">|
             <a href="/register"> Registrate </a>
-              
+            <span class="separador">|
+            <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
+            </div>
           </nav>
+          
       </div>
       <div class="menu">
-        <nav >
-          <a href="/carrito"><i class="fas fa-shopping-cart"></i></a>
-              <a href="#"><i class="fab fa-facebook-square"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="/contacto"><i class="fas fa-envelope"></i></a>           
-            </div>
-        </nav>
+        
       </div>
+      
     </div>
-
+    
 
 
 
@@ -36,27 +35,27 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 4</div>
     <img src="/images/norte1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="text">Caption One</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 4</div>
     <img src="/images/sur1.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 4</div>
     <img src="/images/mendoza.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">4 / 4</div>
     <img src="/images/chalten1.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <div class="text">Caption Four</div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -70,7 +69,8 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
 </div>
     <!-- para que funcionen las acciones de next y previos del carrusel-->
     <script src="/js/carousel.js"></script>
-  </header>
+</header>
