--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -4,6 +4,9 @@
         <%- include('partials/head.ejs') %>
     </head>
 <body>
+    <header>
+        <%- include('partials/header.ejs') %>
+    </header>
     <h1>Gracias por contactarte</h1>
 
     <div>
