--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
             </SCRIPT>
               <FORM NAME="form1">
             <SELECT NAME="select" ONCHANGE="goto(this.form)" SIZE="1">
-                <OPTION VALUE="">-------Choose a Selection-------
+                <OPTION VALUE="">-------Elegí la provincia a la que deseas viajar-------
                 <option value="Ciudad Autonoma de Buenos Aires">Ciudad Autonoma de Buenos Aires</option> 
                 <option value="/buenosaires">Buenos Aires</option> 
                 <option value="Catamarca">Catamarca</option>
@@ -58,7 +58,7 @@
   
          <!--MAPA-->
     <section class="mapa" > 
-        <script type="text/javascript" src="/jQuery-3.6.0.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="/public/map/jquery.vmap.js"></script>
         <script type="text/javascript" src="/public/map/jquery.vmap.argentina.js" charset="utf-8"></script>
         <script>
@@ -76,14 +76,13 @@
         </script>
     </section>
     <h2> MAPA PARA HACER CLICK EN LA CIUDAD</h2>
-         <!-- MAPA -->
-
-    <div class ="map"> 
-        <div id="vmap" style="width: 800px; height: 900px; opacity: 0.8;"></div>
+        <div class ="map"> 
+         <div id="vmap" style="width: 800px; height: 900px; opacity: 0.8;"></div>
+        </div>
+    
     </div>
-    </div>
 
-
+    
         
     </main>
     <footer>
