--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,37 +24,33 @@
       <div class="menu">
         
       </div>
-      
     </div>
-    
-
-
-
+ 
     <!-- Slideshow container -->
-<div class="slideshow-container">
+<div class="slideshow-container" >
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 4</div>
-    <img src="/images/norte1.jpg" style="width:100%">
+    <img src="/images/pano4.jpg" style="width:100%">
     <div class="text">Caption One</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 4</div>
-    <img src="/images/sur1.jpg" style="width:100%">
+    <img src="/images/pano1.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 4</div>
-    <img src="/images/mendoza.jpg" style="width:100%">
+    <img src="/images/pano5.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">4 / 4</div>
-    <img src="/images/chalten1.jpg" style="width:100%">
+    <img src="/images/pano3.jpg" style="width:100%">
     <div class="text">Caption Four</div>
   </div>
 
@@ -62,7 +58,7 @@
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
-<br>
+
 
 <!-- The dots/circles -->
 <div style="text-align:center">
