--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -37,6 +37,8 @@
 	position: relative;
 	justify-content: center;
 	padding: 10px;
+	display: inline-block;
+	justify-content: space-between;
   }
   
 .footer .border {
