--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -62,8 +62,8 @@
                                 <div class="control">
                                     <select name="category" id="category">
                                         <option value="">Seleccione una opción</option>
-                                        <option value="vendedor" <%= user.category == 'vendedor' ? 'selected' : ''; %>>Vendedor</option>
-                                        <option value="comprador" <%= user.category == 'comprador' ? 'selected' : ''; %>>Comprador</option>
+                                        <option value="Administrador" <%= user.category == 'Administrador' ? 'selected' : ''; %>>Administrador</option>
+                                        <option value="Viajero" <%= user.category == 'Viajero' ? 'selected' : ''; %>>Viajero</option>
                                     </select>
                                 </div>
                                 <p class="feedback"></p>
