--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -79,8 +79,8 @@
                                     <div class="control">
                                         <select name="category" id="category">
                                             <option value="">Seleccione una opción</option>
-                                            <option value="vendedor">Administrador</option>
-                                            <option value="comprador">Viajante</option>
+                                            <option value="Administrador">Administrador</option>
+                                            <option value="Viajero">Viajero</option>
                                         </select>
                                     </div>
                                     <p class="feedback"></p>
