--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="css/carrito.css">
 <head>
     <%- include('../partials/head.ejs') %>
 </head>
@@ -16,7 +17,7 @@
         <div class="header-img">
             <img src="/public/images/imagenheader.jpg" width=300px height=300px alt="logo">
          </div>   
-        </div>
+       
 
 <!--ESTO SE SUPERPONE CON EL CARRUSEL-->
       
@@ -97,6 +98,7 @@
             </div>
         </div>
         </div>
+    </div>
     </section>
 <br>
 </main>
