--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,7 +16,7 @@
     <!-- login header -->
     
       <h1 id="header">Ingresá con tu nombre y contraseña</h1>
-      <form id="form" action="/login.html" method="POST">
+      <form id="form" action="/login" method="POST">
         <div class="nombreUsuario">
              <label for="nombre"><i class="fas fa-user">Nombre Usuario:</i> </label>
              <input type="text" name="nombre-usuario" id="nombre" placeholder="Ingrese nombre de usuario aquí">
