--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -35,7 +35,7 @@
                 <input type="checkbox" name="user-type" id="user-type-admin" value="admin" > Administrador
             </label>
             <div class="row">
-                <button type="submit">Enviar</button>
+                <input type="submit" value="Ingresa" >
             </div>
             </div>
         </div>
