--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -88,7 +88,7 @@
 
                             <div class="field">
                                 <div class="control">
-                                    <button type="submit">Crear usuario</button>
+                                    <input type="submit" value="Registarte">
                                 </div>
                             </div> 
                         </form>  
