--- a/public/css/log.css
+++ b/public/css/log.css
@@ -1,5 +1,5 @@
 *{box-sizing: border-box;}
-/* LOGIN Y REGISTER FORMS */
+/* LOGIN Y REGISTER FORMS Y BOTONES */
 
 /* Google Fonts */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
@@ -29,7 +29,7 @@ form {
 }
 
 /* username and password fields */
-input:not([type="button"]) {
+input:not([type="submit"]) {
   font-family: 'Open Sans', 'sans-serif';
   border: 1px solid #acacac;
   color: #666;
@@ -46,7 +46,7 @@ input:not([type="button"]) {
 
 }
 
-input:focus:not([type="button"]) {
+input:focus:not([type="submit"]) {
   border: 1px solid #55acee;
   opacity: 1;
   width: 320px;
@@ -55,7 +55,7 @@ input:focus:not([type="button"]) {
 }
 
 /* submit button */
-input[type="button"] {
+input[type="submit"] {
   padding: 15px 25px;
   font-size: 22px;
   width: 420px;
@@ -69,12 +69,12 @@ input[type="button"] {
   
 }
 
-input[type="button"]:active {
+input[type="submit"]:active {
   transform: translate(0px, 5px);
   -webkit-transform: translate(0px, 5px);
   box-shadow: 0px 0px 0px 0px;
 }
 
-input[type="button"]:hover {
+input[type="submit"]:hover {
   background-color: #6FC6FF;
 }
