--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -42,7 +42,7 @@
                 </ul>
             </p>
         </div>
-        <div class ="boton-borrar" style="font-size: 35px; text-align: center;"><input type="button" value="Vaciar carrito"></div>
+        <div class ="boton-borrar" style="font-size: 35px; text-align: center;"><input type="submit" value="Vaciar carrito"></div>
         <br>
         
     </div>
@@ -77,7 +77,7 @@
             </div>
 
                 <div class="boton">
-                    <div class ="confirmar"><input type="button" value="Confirmar"></div>
+                    <div class ="confirmar"><input type="submit" value="Confirmar"></div>
                 </div>
                 </form>
             </div>
