--- a/src/views/products/paquete1.ejs
+++ b/src/views/products/paquete1.ejs
@@ -22,7 +22,7 @@
                     
                     <!--link que te lleva a Buenos Aires de noche-->
                     <p>
-                       <nav><a href="/bairesnoche">Obras en el Teatro Colón</a></nav> 
+                       <!-- <nav><a href="/paquete1">Obras en el Teatro Colón</a></nav> -->
         
                     </p>
         
