--- a/public/css/products.css
+++ b/public/css/products.css
@@ -6,6 +6,13 @@ body {
     
   }
 
+a   {
+      color: white;
+      text-transform:uppercase;
+      font-weight: bold;
+      font-size: 25px;
+  }
+
 .color-h3{
     
     padding: 20px 0;
@@ -58,6 +65,12 @@ body {
     padding: .5rem;
 }
 
-.pic-item img { width: 100%; }
+.pic-item img { width: 80%; }
 
 
+.button {
+    background-size: contain;
+
+    font-size: 20px;
+    color:black;
+}
