--- a/src/views/products/paquetes.ejs
+++ b/src/views/products/paquetes.ejs
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/products.css">
-    <title>Buenos Aires</title>
+    <title>Paquetes</title>
     <%- include('../partials/head.ejs') %>
 </head>
 <body>
@@ -16,7 +15,7 @@
 
         <!--primer titulo que siempre queda fijo-->
 
-        <h1>Conocé Buenos Aires</h1>
+        <h1>Elegi tu paquete</h1>
  
 <h3 class="color-h3">QUE HACER</h3>
 
@@ -43,6 +42,8 @@
             </p>
 
         </div>
+
+        <!-- DE ACA PARA ABAJO SE VA  -->
         <div class="pic-item">
             <img src="images/comida1.jpg" alt="Imagen del producto">
 
@@ -60,22 +61,49 @@
  </div>
 </div>
 
+<h3 class="color-h3">ALOJAMIENTO</h3>
 
+<div class="container1">
+    <div class="pic-container1">
+        <div class="pic-item">
+            <img src="/images/barolo.jpg" alt="obelisco">
+
+            <p>
+                Hoteles deluxe
+            </p>
         </div>
 
-      
-  
-  
+        <div class="pic-item">
+            <img src="/images/hostel.jpg" alt="Imagen del producto">
 
+            <p>
+                Hosteles
+            </p>
 
-  
+        </div>
+        <div class="pic-item">
+            <img src="images/depto.jpg" alt="Imagen del producto">
 
+            <p>
+                Departamentos 
+            </p>
+        </div>
+    </div>
+</div>
+
+        <h3 class="color-h3">PASAJES</h3>
+
+<div class="container1">
+    <div class="pic-container1">
+        <div class="pic-item">
+            <img src="/images/avion.jpg" alt="avion">
+
+            <p>
+                Gestioná tu reserva acá
+            </p>
+        </div>
 
 </main>
-
-
-
-
 
 
 <!--FOOTER-->
@@ -84,48 +112,3 @@
 </body>
 </html>
 
-
-
-<!--        <h3>Pasajes</h3>
-
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 4
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 5
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 6
-            </p>
-        </div>
-        <h3> Que hacer</h3>
-
-
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 7
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 8
-            </p>
-        </div>
-        <div class="pic-item">
-            <img src="img/product-bg.jpeg" alt="Imagen del producto">
-            <p>
-                Caja 9
-            </p>
-        </div>
-     
-    </div>-->
