--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,7 +33,11 @@
                <nav><a href="/paquete1">El sur en invierno</a></nav> 
 
             </p>
-
+            <div class="card-text">
+                <p>Recorré el sur con nosotros, te mostramos los mejores paisajes y actividades.</p>
+            </div>
+            <div class="price">
+                <p>$50.990</p>
         </div>
 <!--NORTE PQUETE2-->
         <div class="pic-item">
@@ -46,7 +50,11 @@
                <p>
                     <nav><a href="/paquete2">Recorriendo el norte: Jujuy 360°</a></nav> 
                 </p>
-
+                <div class="card-text">
+                    <p>Conocé todos los pasiajes del norte y sus atracciones.</p>
+                </div>
+                <div class="price">
+                    <p>$40.500</p>
         </div>
 
 <!-- MZAPAQUETE3-->
@@ -61,6 +69,11 @@
             <p>
                 <nav><a href="/paquete3">La ruta del vino en mendoza</a></nav> 
             </p>
+            <div class="card-text">
+                <p>Conocé las mejores bodegas de la región</p>
+            </div>
+            <div class="price">
+                <p>$52.990</p>
             </div>
 --------------------------------------------------------
           </div>
