--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -30,7 +30,7 @@
             </div>
 
             <p>
-               <nav><a href="/paquete1">El sur en invierno</a></nav> 
+               <nav><a href="/paquete1">Patagonia en verano</a></nav> 
 
             </p>
             <div class="card-text">
