--- a/src/views/products/paquete1.ejs
+++ b/src/views/products/paquete1.ejs
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/products.css">
+    <link rel="stylesheet" href="css/paquetes.css">
     <title>Patagonia en verano</title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <%- include('../partials/head.ejs') %>
 </head>
 <body>
@@ -13,8 +14,9 @@
         <%- include('../partials/header.ejs') %>
     </header>
     <main>
-        <h1>Patagonia en verano</h1>
-
+        <div class="h2">
+        <h2>Patagonia en verano</h2>
+    </div>
         <div class="container1">
             <div class="pic-container1">
                 <div class="pic-item">
@@ -23,44 +25,45 @@
                     <h2>Conocé los mejores paisajes de la Patagonia Argentina durante el verano</h2>
                 </section>
                 </div>
-      <!--todo esto va debajo de la foto-->      
-                <article class="include">
-                    <p>Nuestro paquete incluye;</p>
-                    <div class="items">Avion</div>
-                    <div class="items">Traslados</div>
-                    <div class="items">Alojamiento</div>
-                </article>
+            </div>
 
 
          <!--CHECKBOX DE ACTIVIDADES, DEJARLO FIJO o hacer un cirulo - va debajo de INCLUDE
         -->      
              <article class="conjunto">
                 <div class="textopaquete">
-                    <h2>Excursiones y actividades</h2>
+                    <h2 class="h2">Excursiones y actividades</h2>
                 </div>
+
                 <div class="itemspaquete"></div>
                 <div>
-                    <input type="checkbox" id="exc1">
-                    <label for="exc1"></label>
-                    "Gastronomia"
-                     </label>
-                </div>
-                <div>
-                    <input type="checkbox" id="exc1">
-                    <label for="exc1"></label>
-                    "Recorrida por los lagos"
-                     </label>
-                </div>
-                <div>
-                    <input type="checkbox" id="exc1">
-                    <label for="exc1"></label>
-                    "Dia de camping"
-                     </label>
+                    <ul class="lista">
+                        <li>Gastronomia</li>
+                        <li>Recorrida por los lagos</li>
+                        <li>Dia de camping</li>
+                        <li>Mountain tracking</li>
+                        <li>Salidas nocturnas</li>
+                    </ul>
                 </div>
              </article>
-             
-              
-         </div>
+                   <!--todo esto va debajo de la foto-->      
+                   <article class="include">
+
+                    <i class="fas fa-fly"></i>
+
+
+                    <p>Nuestro paquete incluye;</p>
+                    <div class="items"><i class="fas fa-plane"></i>Avion</div>
+                    <div class="items"><i class="fas fa-car"></i>Traslados</div>
+                    <div class="items"> <i class="fas fa-concierge-bell"></i>Alojamiento</div>
+                </article>
+
+                <div class="button">
+                    <button class= btn sm btn-pink-outline>
+                        <a href="/carrito">RESERVAR</a>
+                    </button>
+                </div>
+  
         </div>
 </main>
 
