--- a/public/css/paquetes.css
+++ b/public/css/paquetes.css
@@ -1,6 +1,13 @@
 * {
     box-sizing: content-box;
 }
+
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif;
+    
+  }
+
 .container1 {
     padding: 60px 0;
     width: 90%;
@@ -50,5 +57,9 @@ li{
 .pic-item img { width: 80%; }
 
 .lista{
+ 
+        text-align: left;
+        display:inline-block;
+    
     
 }
