--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,3 +58,12 @@ h2{
             width: calc(25% - 1rem);
         }
     }
+
+
+
+    .container{
+
+    }
+
+    /* container pic-container y pic-item forman el box
+    NO ME
