--- a/public/css/products.css
+++ b/public/css/products.css
@@ -6,6 +6,14 @@ body {
     
   }
 
+ 
+.header {
+    font-size: 20px;
+    margin-top: -5%;
+    
+}
+
+  
 a   {
       color: black;
       text-transform:uppercase;
@@ -34,8 +42,8 @@ a   {
     margin: auto;
     overflow: hidden;
     text-align: center;
- 
     flex-direction: row;
+    display:inline-flexbox;
 }
 
 .pic-container1 {
@@ -74,3 +82,5 @@ a   {
     font-size: 20px;
     color:black;
 }
+
+
