--- a/public/css/products.css
+++ b/public/css/products.css
@@ -36,14 +36,17 @@ a   {
 /* box de fotos*/
 
 .container1 {
-    padding: 60px 0;
-    width: 90%;
+
     max-width: 1000px;
     margin: auto;
     overflow: hidden;
     text-align: center;
     flex-direction: row;
     display:inline-flexbox;
+    box-sizing: content-box;
+    width: 33.33%; 
+    padding: 5px; 
+      
 }
 
 .pic-container1 {
@@ -51,7 +54,7 @@ a   {
     flex-wrap: wrap;
     justify-content: center;
     justify-content: space-around;
-    
+
     /* align-items: flex-end;
     align-content: flex-end; */
     /*flex-direction: column;*/
