--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/head.ejs') %>
-    <link rel="stylesheet" href="css/products.css">
+    <%- include('../partials/head.ejs') %>
+    <link rel="stylesheet" href="css/paquetes.css">
 </head>
 <body>
     <header>
-        <%- include('partials/header.ejs') %>
+        <%- include('../partials/header.ejs') %>
     </header>
     <main>
      
 <h3 class="color-h3">CREAR PAQUETE</h3>
 <ul>
     <li>
-        <a href="/products/crear"> CREAR PAQUETE</a>
+        <a href=""> CREAR PAQUETE</a>
     </li>
     <li>
-        <a href="/paquetes"> VER PAQUETES</a>
+        <a href=""> VER PAQUETES</a>
     </li>
 </ul>
 
@@ -28,7 +28,7 @@
 
 </main>
     <footer>
-    <%- include('partials/footer.ejs') %>
+        <%- include('../partials/footer.ejs') %>
 </footer>
 </body>
 </html>
