--- a/public/css/products.css
+++ b/public/css/products.css
@@ -37,22 +37,20 @@ a   {
 
 .container1 {
 
-    max-width: 1000px;
+    /* max-width: 1000px; */
     margin: auto;
     overflow: hidden;
     text-align: center;
     flex-direction: row;
-    display:inline-flexbox;
     box-sizing: content-box;
-    width: 33.33%; 
+    
     padding: 5px; 
       
 }
 
 .pic-container1 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    
     justify-content: space-around;
 
     /* align-items: flex-end;
@@ -68,7 +66,7 @@ a   {
 .pic-item {
     width: calc(100% - 1rem);
     /* height: 100px; */
-
+    width: 33.33%; 
     background-color:lightblue;
     margin-right: .5rem;
     margin-left: .5rem;
@@ -76,7 +74,7 @@ a   {
     padding: .5rem;
 }
 
-.pic-item img { width: 80%; }
+.pic-item img { width: 80%; max-height: 300px;}
 
 
 .button {
