--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,7 +19,12 @@
     
     <div class="container1">
     <div class="pic-container1">
-        
+        <div> para probar </div>
+        <ul>
+            <li><a href="/crear">crear paquete </a> </li>
+            <li><a href="/lista">listado de paquetes </a> </li>
+            <li><a href="/edit">editar paquetes no todavia</a> </li>
+        </ul>
 
 <!--SUR PAQUETE1-->
         <div class="pic-item">
