--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,6 +7,13 @@
 <body>
     <header>
         <%- include('partials/header.ejs') %>
+        <div> Administrador </div>
+        <ul>
+            <li><a href="/crear">Crear paquete </a> </li>
+            <li><a href="/lista">Listado de paquetes </a> </li>
+            <li><a href="/edit">Editar paquetes</a> </li>
+            <li><a href="/userList">Administrar usuarios</a> </li>
+        </ul>
     </header>
 
 
@@ -19,12 +26,7 @@
     
     <div class="container1">
     <div class="pic-container1">
-        <div> para probar </div>
-        <ul>
-            <li><a href="/crear">crear paquete </a> </li>
-            <li><a href="/lista">listado de paquetes </a> </li>
-            <li><a href="/edit">editar paquetes no todavia</a> </li>
-        </ul>
+  
 
 <!--SUR PAQUETE1-->
         <div class="pic-item">
