--- a/src/views/products/crear.ejs
+++ b/src/views/products/crear.ejs
@@ -24,7 +24,7 @@
         </div>
         <div>
             <label for="">Imagen</label>
-            <input type="file" name="image" id="image">>
+            <input type="file" name="image" id="image">
         </div>
         <div>
             <label for="">Descripción</label>
