--- a/src/views/products/lista.ejs
+++ b/src/views/products/lista.ejs
@@ -15,9 +15,9 @@
             </li>
         </ul>
         <ul>   
-            <% for (let i = 0; i<products.length; i++) { %>
+            <% for (let i = 0; i<Product.length; i++) { %>
                 <li>
-                    <%=products[i].name %>
+                    <%=Product[i].name %>
                 </li>
 
           <%  } %>
