--- a/src/views/products/lista.ejs
+++ b/src/views/products/lista.ejs
@@ -9,6 +9,7 @@
         <%- include('../partials/header.ejs') %>
     </header>
     <main>
+
         <ul>    
             <li>
                 <a href="../products/crear.ejs"> Crear paquete </a>
@@ -27,7 +28,7 @@
 
 
 
-
+<!--ACA PODRIA IR  LO DE DETAIL -->
        
 
 
